fixed minor alignment issue

--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -49,7 +49,6 @@
       color: $darkBlue;
     }
     p {
-      text-align: start;
       margin-bottom: 3.4rem;
     }
     button {
